--- a/src/HTML/index.html
+++ b/src/HTML/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manulah</title>
+    <link rel="stylesheet" href="estilos.css">
+    
 </head>
 <body>
-    <nav>
-        <div> 
+    <header>
+        <div id="Ejemplo"> 
             <p>Iconos de redes sociales, logo, contaco, fav, lupa y carrito </p>
         </div>
-    </nav>
+    </header>
     <main>
         <section>
             aqui va el carrousel 
@@ -24,7 +26,7 @@
         </section>
         <section>
             <Article>
-                Tarjeta (contiene imagen, titulo y precio)
+                <img src="" alt="">
             </Article>
             <Article>
                 Tarjeta (contiene imagen, titulo y precio)
